# job-search-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/job-search/: SKILL.md
.github/workflows/: ci.yml
docs/: non-technical.md  skills.md  system-design.md  technical.md  user-manual.md  workflows.md
src/job_search_bot/: __init__.py  bot.py  companies.py  csv_writer.py  models.py  workday.py
