[project]
name = "job-search-bot"
version = "0.1.0"
description = "Conversational CLI chatbot that fetches Workday job postings for any company."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
]

[project.scripts]
job-search-bot = "job_search_bot.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_search_bot"]
